--- a/index.html
+++ b/index.html
@@ -1,31 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Product Filter</title>
+  <meta charset="UTF-8">
+  <title>SVG Drawing Tool</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <div class="container">
-    <h2>Product List</h2>
-    <label for="category">Filter by Category:</label>
-    <select id="category">
-      <option value="All">All</option>
-      <option value="Clothing">Clothing</option>
-      <option value="Electronics">Electronics</option>
-      <option value="Books">Books</option>
-    </select>
+<div class="container">
+  <h3>SVG Drawing Tool</h3>
+  <svg id="drawingArea" width="500" height="300"></svg>
+  <br>
+  <button id="clearBtn">Clear</button>
+</div>
 
-    <ul id="product-list">
-      <li data-category="Clothing">T-Shirt</li>
-      <li data-category="Clothing">Jeans</li>
-      <li data-category="Electronics">Headphones</li>
-      <li data-category="Electronics">Smartphone</li>
-      <li data-category="Books">Novel</li>
-      <li data-category="Books">Cookbook</li>
-    </ul>
-  </div>
-
-  <script src="script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
